team selection mobile fix

--- a/src/app/common/components/team-membership/team-membership.component.scss
+++ b/src/app/common/components/team-membership/team-membership.component.scss
@@ -1,3 +1,7 @@
+body{
+    position: fixed;
+}
+
 h2{
     font-size: 48px;
 }
@@ -586,7 +590,7 @@ h2{
    
     .free-membership{
         .box-content{
-            bottom: 16px;
+            bottom: 60px;
         }
         &.big-box{
             .rookie-racer{
@@ -603,7 +607,8 @@ h2{
     }
     .premium-membership{
         .box-content{
-            bottom: 16px;
+            left: 33%;
+            bottom: 60px;
         }
         &.big-box{
             .mr-mrs-rich{
@@ -746,6 +751,60 @@ h2{
         .non-mobile-part{
             max-height: 0;
             transition: 1s ease-in-out;
+        }
+    }
+    .content-title{
+        margin-left: 10px;
+    }
+    .free-membership{
+        .box-content{
+            left: 40px;
+            bottom: 65px;
+        }
+    }
+    .box-content{
+        .membership-heading{
+            font-size: 22px;
+            line-height: 20px;
+        }
+        .membership-bonus{
+            font-size: 14px;
+        }
+        .bonus-heading{
+            font-size: 13px;
+            list-style: 15px;
+            margin-bottom: 20px;
+        }
+        .bonus{
+            margin-top: 10px;
+            margin-bottom: 0;
+            font-size: 10px;
+            img{
+                width: 16px;
+                margin-right: 1px;
+            }
+        }
+        .membership-time{
+            font-size: 14px;
+            line-height: 14px;
+            width: 75px;
+            margin-top: 20px;
+            .sticker-blue,.sticker-gold{
+                font-size: 8px;
+                width: 45px;
+                top: -11px;
+            }
+            .underline{
+                height: 2px;
+            }
+        }
+        .pay-button,.join-btn{
+            margin-top: 25px;
+            width: 150px;
+            line-height: 18px;
+            img{
+                width: 18px;
+            }
         }
     }
   }
